fixed image overflow issue

--- a/style.css
+++ b/style.css
@@ -1,21 +1,24 @@
 * {
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
     overflow: none;
 }
 
 body {
     text-align: center;
+    margin: 0 5em;
 }
 
 img {
-    border-radius: 5px;
+    border-radius: 10px;
+    max-width: 100%;
+    max-height: 100%;
 }
 
 #profile-img {
     width: 5vw;
     height: 10vh;
+    margin: 2rem auto 0.5rem;
 }
 
 .boxes {
@@ -23,29 +26,28 @@ img {
     grid-auto-flow: column;
     column-gap: 1em;
     justify-content: center;
-    margin: 1rem auto;
+    margin: 1rem auto 2rem;
 }
 
 .boxes div {
-    background-color: gray;
+    background-color: rgba(128, 128, 128, 0.4);
     border-radius: 5px;
-    padding: 2rem rem;
+    padding: 1rem 1.5rem;
 }
 
 .image-container {
-    border: 1px solid red;
     display: grid;
     justify-content: stretch;
-    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-columns: minmax(1fr, 1fr);
     grid-template-rows: auto;
     grid-template-areas:
         "one two two"
         "three three four"
         "five six four";
     gap: 0.5rem;
-    margin: 1em 5em;
-    width: 100vw;
-    height: 100vh;
+    width: 80vw;
+    min-height: 100vh;
+    margin: 0 auto;
 }
 
 #img1 {
@@ -67,6 +69,7 @@ img {
 #img5 {
     grid-area: five;
 }
+
 #img6 {
     grid-area: six;
 }
@@ -75,6 +78,7 @@ footer {
     color: gray;
     text-align: center;
     font-size: 1.2rem;
+    margin: 2rem auto 0.5rem;
 }
 
 footer a {
@@ -83,6 +87,18 @@ footer a {
 }
 
 @media screen and (max-width:768px){
+    .image-container {
+        margin: 0;
+    }
+
+    #profile-img {
+        width: 30%;
+    }
+
+    .boxes div {
+        padding: 0.5em 1em;
+    }
+
     footer {
         font-size: 0.8em;
     }
